...
                        Text("Refresh")
                    }

                    TextButton(
                        onClick = onCreateIncidentClick
                    ) {
                        Text("Create")
                    }
                }
            )
        }
    ) { innerPadding ->

...
